--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,8 @@ dependencies {
     runtimeOnly("com.h2database:h2")
     implementation("io.micronaut:micronaut-validation")
 
-    // TODO get transactions working.
     implementation("io.micronaut.spring:micronaut-spring-annotation")
-    runtimeOnly("org.springframework:spring-jdbc")
+    implementation("org.springframework:spring-jdbc")
 }
 
 application {
