--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     runtimeOnly("com.h2database:h2")
     implementation("io.micronaut:micronaut-validation")
 
+    // TODO get transactions working.
+    implementation("io.micronaut.spring:micronaut-spring-annotation")
+    runtimeOnly("org.springframework:spring-jdbc")
 }
 
 
