--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     // TODO get transactions working.
     implementation("io.micronaut.spring:micronaut-spring-annotation")
-    runtimeOnly("org.springframework:spring-jdbc")
+    implementation("org.springframework:spring-jdbc")
 }
 
 
